<?xml version="1.0" encoding="utf-8"?>
<resources>
    
    <string name="app_name">Skylight TDC</string>
<string name="camera_button_label">Camera...</string>
<string name="sensors_button_label">Sensors...</string>
<string name="accelerometer_label">Accelerometer</string>
<string name="record_button_label">Record</string>
<string name="stop_button_label">Stop</string>
<string name="back_button_label">Back</string>
<string name="magnetometer_label">Magnetometer</string>
<string name="orientation_label">Orientation</string>


<string name="preview_format_label">Preview Format</string>
<string name="preview_frame_rate_label">Preview Frame Rate</string>
<string name="preview_width_label">Preview Width</string>
<string name="preview_height_label">Preview Height</string>


<string name="quit_button_label">Quit</string>
</resources>
