<LinearLayout android:id="@+id/LinearLayout01"
	android:layout_height="wrap_content"
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical" android:layout_width="fill_parent">

	<Button android:layout_height="wrap_content"
		android:layout_width="fill_parent" android:layout_weight=".5"
		android:text="@string/camera_button_label" android:id="@+id/cameraButton">
	</Button>
	<Button android:layout_height="wrap_content"
		android:layout_width="fill_parent" android:layout_weight=".5"
		android:text="@string/sensors_button_label" android:id="@+id/sensorsButton">
	</Button>
	<Button android:layout_height="wrap_content"
		android:layout_width="fill_parent" android:layout_weight=".5"
		android:text="@string/quit_button_label" android:id="@+id/quitButton">
	</Button>
</LinearLayout>
