<LinearLayout android:id="@+id/LinearLayout01"
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent">

	<TableLayout android:id="@+id/TableLayout01"
		android:layout_height="wrap_content"
		xmlns:android="http://schemas.android.com/apk/res/android"
		android:layout_width="fill_parent">
		<TableRow android:id="@+id/TableRow01"
			android:layout_height="wrap_content"
			android:layout_width="fill_parent">
			<TextView android:id="@+id/TextView01"
				android:layout_height="wrap_content"
				android:layout_width="wrap_content"
				android:text="@string/preview_format_label"
				android:layout_gravity="center_vertical">
			</TextView>

			<Spinner android:layout_height="wrap_content"
				android:prompt="@string/accelerometer_label"
				android:layout_width="fill_parent" android:layout_weight="1"
				android:id="@+id/previewFormatSpinner">
			</Spinner>
		</TableRow>

		<TableRow android:id="@+id/TableRow02"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content">
			<TextView android:id="@+id/TextView02"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/preview_frame_rate_label">
			</TextView>

			<EditText android:layout_height="wrap_content"
				android:layout_width="fill_parent" android:layout_weight="1"
				android:text="10" android:gravity="right|center_vertical"
				android:id="@+id/previewFrameRate">
			</EditText>
		</TableRow>

		<TableRow android:id="@+id/TableRow03"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content">
			<TextView android:id="@+id/TextView03"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/preview_width_label"
				android:layout_gravity="center_vertical">
			</TextView>

			<EditText android:layout_height="wrap_content"
				android:layout_width="fill_parent" android:layout_weight="1"
				android:text="10" android:gravity="right|center_vertical"
				android:id="@+id/previewWidth">
			</EditText>
		</TableRow>

		<TableRow android:id="@+id/TableRow04"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content">
			<TextView android:id="@+id/TextView04"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/preview_height_label"
				android:layout_gravity="center_vertical">
			</TextView>

			<EditText android:layout_height="wrap_content"
				android:layout_width="fill_parent" android:layout_weight="1"
				android:text="10" android:gravity="right|center_vertical"
				android:id="@+id/previewHeight">
			</EditText>
		</TableRow>
	<TextView android:text="Text" android:id="@+id/cameraFilename"
        android:layout_width="fill_parent" 
        android:textColor="#ffffffff" android:textSize="16sp">
    </TextView>	
	</TableLayout>


	<LinearLayout android:id="@+id/LinearLayout02"
		android:layout_height="wrap_content"
		android:layout_width="fill_parent">
		<Button android:layout_height="wrap_content"
			android:layout_width="fill_parent" android:layout_weight=".5"
			android:text="@string/record_button_label" android:id="@+id/recordButton">
		</Button>
		<Button android:layout_height="wrap_content"
			android:layout_width="fill_parent" android:layout_weight=".5"
			android:text="@string/back_button_label"
			android:id="@+id/backButton">
		</Button>
	
	</LinearLayout>

	<net.nycjava.skylight.tdc.Preview android:id="@+id/previewSurfaceView"
		xmlns:android="http://schemas.android.com/apk/res/android"
		android:orientation="vertical" android:layout_width="fill_parent"
		android:layout_height="fill_parent">
	</net.nycjava.skylight.tdc.Preview>


</LinearLayout>
