<LinearLayout android:id="@+id/LinearLayout01"
	android:layout_height="wrap_content"
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical" android:layout_width="fill_parent">

	<TableLayout android:id="@+id/TableLayout01"
		android:layout_height="wrap_content"
		xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="fill_parent">
		<TableRow android:id="@+id/TableRow01"
			android:layout_height="wrap_content" android:layout_width="fill_parent">
			<TextView android:id="@+id/TextView01"
				android:layout_height="wrap_content" android:layout_width="wrap_content" android:text="@string/accelerometer_label">
			</TextView>
			
		<Spinner android:id="@+id/Spinner01" android:layout_height="wrap_content" android:prompt="@string/accelerometer_label" android:layout_width="fill_parent" android:layout_weight="1"></Spinner>
</TableRow>


		
		
	

<TableRow android:id="@+id/TableRow02" android:layout_width="wrap_content" android:layout_height="wrap_content"><TextView android:id="@+id/TextView02" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/magnetometer_label"></TextView>
<Spinner android:id="@+id/Spinner02" android:layout_height="wrap_content" android:layout_width="fill_parent" android:layout_weight="1" android:prompt="@string/magnetometer_label"></Spinner>
</TableRow>
<TableRow android:id="@+id/TableRow03" android:layout_width="wrap_content" android:layout_height="wrap_content"><TextView android:id="@+id/TextView03" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/orientation_label"></TextView>
<Spinner android:id="@+id/Spinner03" android:layout_height="wrap_content" android:layout_width="fill_parent" android:layout_weight="1" android:prompt="@string/orientation_label"></Spinner>
</TableRow>
</TableLayout>


	<LinearLayout android:id="@+id/LinearLayout02"
		android:layout_height="wrap_content" android:layout_width="fill_parent">
		<Button android:layout_height="wrap_content" android:layout_width="fill_parent" android:layout_weight=".5" android:text="@string/record_button_label" android:enabled="false" android:id="@+id/recordButton">
		</Button>
		<Button android:layout_height="wrap_content" android:layout_width="fill_parent" android:layout_weight=".5" android:id="@+id/backButton" android:text="@string/back_button_label">
		</Button>
	</LinearLayout>

	<TextView android:text="Text" android:id="@+id/sensorFilename"
        android:layout_width="fill_parent" android:layout_height="wrap_content"
        android:textColor="#ffffffff" android:textSize="36sp">
    </TextView>
    	<TextView android:text="Text" android:id="@+id/balance"
        android:layout_width="fill_parent" android:layout_height="wrap_content"
        android:textColor="#ffffffff" android:textSize="36sp">
    </TextView>
</LinearLayout>
